# OMW-ONLINE

./: README-build-mrzer0x0.md  build.gradle  gradlew
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cursor/: MouseCursor.kt
app/src/main/java/mods/: AnkoCompat.kt  Mod.kt  ModsAdapter.kt  ModsCollection.kt  ModsDatabase.kt
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLActivity.java.bak
app/src/main/java/parser/: CommandlineParser.kt
app/src/main/java/ui/activity/: ConfigureControls.kt  GameActivity.kt  MainActivity.kt  ModsActivity.kt
app/src/main/java/ui/controls/: ButtonTouchListener.kt  Osc.kt  OscAttackButton.kt
app/src/main/java/ui/fragments/: FragmentSettings.kt
app/src/main/java/utils/: Utils.kt
app/src/main/res/drawable/: launcher_panel_background.xml  mod_item_background.xml  mod_item_selected_background.xml
app/src/main/res/layout/: activity_mods.xml  main.xml  mod_item.xml
app/src/main/res/menu/: menu_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: settings.xml
app/src/nightly/res/values/: colors.xml  strings.xml  styles.xml
buildscripts/: CMakeLists.txt  build.sh
buildscripts/include/: command_wrapper_head.sh.in  download-ndk.sh  setup-ndk.sh  version.sh
buildscripts/patches/: crabnet-no-pthread.patch
buildscripts/patches/openmw/: 09-fix-maskedoc-clang-version.patch
